# SkillScout

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  schema.sql
config/: .env.example  config.toml  config_GUI.py  settings.py
data/curated/: cleaned_careerjet.json  cleaned_rozee.json
data/raw/: careerjet.json  rozee.json
docs/: CONCEPT_NOTE.md  Documentation.txt  SystemDesign.md  SystemDesign.txt  mustakbil.md  rozee.md
scripts/: run_all_extractors.py  run_analytics_api.py  run_extractors.py  run_loaders.py  run_transformers.py
src/analyzers/: __init__.py  skill_analyzer.py
src/analyzers/api/: api_app.py
src/extractors/: __init__.py  base.py  base_extractor.py  careerjet.py  index.html  mustakbil.py  roles.py  rozee.md  rozee.py  rozee_scraper.py
src/loaders/: __init__.py  job_transformer.py  main_loader.py
src/transformers/: __init__.py  careerjet_cleaner.py  cleaner.py  main_transformer.py  rozee_cleaner.py  soft_skills.py
src/utils/: logger.py
